--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,8 @@
 /* Start global styles */
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -13,6 +15,7 @@ html {
 body {
   font-family: "Poppins", sans-serif;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 /* End global styles */
@@ -20,14 +23,20 @@ body {
 /* Start header, navbar, burger menu styles */
 
 #header {
+  position: sticky;
+  left: 0;
+  top: 0;
   width: 100%;
-  height: 70px;
-  background-color: rgb(255, 111, 28);
+  height: 50px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
+  padding: 0 2rem;
+  background-color: rgb(52, 164, 255);
+  box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.3);
+  z-index: 100;
 }
 
 #trademark {
@@ -36,13 +45,13 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  margin-left: 3rem;
 }
 
 #trademark-text {
   font-size: 3rem;
-  font-weight: 900;
+  font-family: "Lobster", cursive;
   text-transform: uppercase;
+  letter-spacing: 5px;
 }
 
 #navbar {
@@ -54,7 +63,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 3rem;
-  background-color: rgb(255, 111, 28);
+  background-color: rgb(52, 164, 255);
 }
 
 #links-container {
@@ -63,27 +72,31 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
 }
 
 .nav-link {
   display: flex;
   align-items: center;
   width: max-content;
-  height: 100%;
-  padding: 0 1.5rem;
-  font-size: 1.8rem;
+  height: 80%;
+  padding: 0 1rem;
+  font-size: 1.3rem;
   font-weight: 500;
   text-decoration: none;
   line-height: 0px;
+  background-color: rgba(255, 255, 255, 0.3);
   color: black;
-  border: 0;
-  background-color: rgb(255, 157, 101);
+  border-radius: 5px;
   transition: all 350ms;
 }
 
 .nav-link:hover {
-  background-color: rgb(255, 111, 28);
-  color: rgb(32, 32, 32);
+  background-color: rgb(255, 255, 255);
+}
+
+.current.nav-link {
+  background-color: rgb(255, 255, 255);
 }
 
 #burger {
@@ -95,15 +108,15 @@ body {
 }
 
 .line {
-  width: 5rem;
-  height: 0.5rem;
+  width: 4rem;
+  height: 0.4rem;
   background-color: black;
   border-radius: 5px;
-  transition: all 400ms;
+  transition: all 300ms;
 }
 
 .active#burger .line:nth-of-type(1) {
-  transform: rotate(-45deg) translateY(17px);
+  transform: rotate(-45deg) translateY(15px);
 }
 
 .active#burger .line:nth-of-type(2) {
@@ -112,14 +125,14 @@ body {
 }
 
 .active#burger .line:nth-of-type(3) {
-  transform: rotate(45deg) translateY(-17px);
+  transform: rotate(45deg) translateY(-16px);
 }
 
 .active#navbar {
   transform: translateX(0%);
 }
 
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 900px) {
   #header {
     gap: 0;
   }
@@ -127,21 +140,22 @@ body {
   #navbar {
     width: 30%;
     position: absolute;
-    top: 7rem;
+    top: 5rem;
     right: 0;
-    height: calc(100vh - 70px);
+    height: calc(100vh - 50px);
     transform: translate(150%);
-    transition: all 400ms;
+    transition: all 300ms;
   }
 
   #links-container {
+    width: 100%;
     flex-direction: column;
     justify-content: flex-start;
-    width: 100%;
     gap: 1rem;
     padding-top: 2rem;
     overflow-y: auto;
   }
+
   .nav-link {
     width: 90%;
     height: 50px;
@@ -152,7 +166,6 @@ body {
 
   #burger {
     display: flex;
-    margin-right: 3rem;
   }
 }
 
@@ -169,20 +182,16 @@ body {
 }
 
 @media only screen and (max-width: 425px) {
-  #trademark {
-    margin-left: 2rem;
-  }
   #trademark-text {
     font-size: 2.5rem;
   }
+
   #navbar {
     width: 70%;
   }
+
   .nav-link {
     padding: 0 1rem;
-  }
-  #burger {
-    margin-right: 2rem;
   }
 }
 
@@ -190,8 +199,9 @@ body {
 
 /* Start global form styles */
 .form-main-container {
+  position: relative;
   width: 100%;
-  min-height: calc(100vh - 70px);
+  min-height: calc(100vh - 50px);
   height: max-content;
   display: flex;
   flex-direction: row;
@@ -204,25 +214,27 @@ body {
 .form-container {
   width: 50%;
   height: auto;
-  padding: 0 2rem;
   display: flex;
   justify-content: center;
+  padding: 0 2rem;
 }
 
 .form {
   width: 100%;
-  max-width: 650px;
-  padding: 3rem 2rem;
-  border: 2px solid rgb(255, 111, 28);
-  border-radius: 5px;
-  background-color: rgb(255, 251, 248);
+  max-width: 500px;
+  height: max-content;
   display: flex;
   flex-direction: column;
   gap: 2rem;
+  padding: 4rem 3rem;
+  background-color: rgb(240, 248, 255);
+  border: 2px solid rgb(52, 164, 255);
+  border-radius: 5px;
+  margin: 3rem 0;
 }
 
 .form-title {
-  font-size: 4rem;
+  font-size: 3.5rem;
   font-weight: 700;
 }
 
@@ -235,17 +247,44 @@ body {
 }
 
 .input-container label {
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 500;
 }
 
 .input-container input {
-  font-size: 1.8rem;
-  height: 50px;
-  border-radius: 5px;
+  font-size: 1.5rem;
+  height: 40px;
   padding-left: 1rem;
+  border-radius: 5px;
   border: none;
-  border: solid 2px black;
+  border: solid 2px rgba(0, 0, 0, 0.7);
+}
+
+.select-container {
+  position: relative;
+}
+
+.select-container select {
+  appearance: none;
+  border: none;
+  width: 100%;
+  height: 40px;
+  border: solid 2px rgba(0, 0, 0, 0.7);
+  border-radius: 5px;
+  font-size: 1.5rem;
+  padding: 0 1rem;
+}
+
+.select-container::after {
+  content: "";
+  width: 1rem;
+  height: 1rem;
+  background-color: rgba(0, 0, 0, 0.7);
+  clip-path: polygon(100% 0%, 0 0%, 50% 100%);
+  position: absolute;
+  top: 45px;
+  right: 10px;
+  touch-action: none;
 }
 
 .submit-container {
@@ -256,20 +295,20 @@ body {
 }
 
 .submit-container input {
-  width: 200px;
-  height: 50px;
-  padding: 0 2.5rem;
-  border-radius: 5px;
-  border: solid 3px rgb(255, 111, 28);
-  background-color: transparent;
-  font-size: 2rem;
+  width: 170px;
+  height: 45px;
+  font-size: 1.8rem;
   font-weight: 500;
+  text-align: center;
+  background-color: rgb(255, 255, 255);
+  border: solid 2px rgb(52, 164, 255);
+  border-radius: 5px;
   transition: all 300ms;
   cursor: pointer;
 }
 
 .submit-container input:hover {
-  background-color: rgb(255, 111, 28);
+  background-color: rgb(52, 164, 255);
 }
 
 .submit-container input:active {
@@ -285,19 +324,178 @@ body {
 }
 
 .img-container {
-  width: 90%;
-  max-width: 550px;
+  width: 80%;
+  max-width: 450px;
   height: auto;
   max-height: 90vh;
   border-radius: 100%;
-  box-shadow: 5px 5px 3px 3px rgba(0, 0, 0, 0.3);
 }
 
 .form-img {
   width: 100%;
   height: 100%;
-  margin-top: 3px;
-  object-fit: cover;
   border-radius: 100%;
+  box-shadow: -5px 5px 3px 3px rgba(0, 0, 0, 0.3);
+}
+
+@media only screen and (max-width: 780px) {
+  .form-main-container {
+    min-height: calc(100vh - 80px);
+    flex-direction: column;
+    gap: 0;
+    padding: 2rem;
+    margin-top: 3rem;
+  }
+
+  .form-container {
+    position: relative;
+    width: 100%;
+    z-index: 50;
+  }
+
+  .form-title {
+    font-size: 3rem;
+  }
+
+  .input-container label {
+    font-size: 1.5rem;
+  }
+
+  .submit-container input {
+    width: 150px;
+    font-size: 1.5rem;
+  }
+
+  .form-img-container {
+    position: relative;
+    width: 100%;
+  }
+
+  .img-container {
+    width: 100%;
+    height: auto;
+    border-radius: 100%;
+  }
+
+  .img-container {
+    position: absolute;
+    top: -70px;
+    left: 0;
+    z-index: 10;
+  }
+}
+
+@media only screen and (max-width: 340px) {
+  .form {
+    padding: 3rem;
+  }
+
+  .form-title {
+    font-size: 2.8rem;
+  }
+
+  .submit-container input {
+    height: 40px;
+  }
 }
 /* End global form styles */
+
+/* Start about page styles */
+.about-container {
+  width: 100%;
+  height: auto;
+}
+
+.title-container {
+  width: 100%;
+  height: calc(100vh - 50px);
+  background-image: url(https://picsum.photos/2000);
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
+}
+
+.title-container h1 {
+  font-size: 4rem;
+  font-weight: 700;
+  letter-spacing: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+  color: white;
+  padding: 2rem;
+  box-shadow: 5px 5px 0 0 rgba(255, 255, 255, 0.5);
+}
+
+.info-container {
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  width: 100%;
+  height: auto;
+}
+
+.info-container h2,
+.location-container h2,
+.social-container h2 {
+  position: relative;
+  grid-column: span 12;
+  padding: 4rem 0;
+  font-size: 3rem;
+  font-weight: 700;
+  text-align: center;
+  background-color: rgb(0, 20, 56);
+  color: white;
+}
+
+.info-container h2::after,
+.location-container h2::after,
+.social-container h2::after {
+  position: absolute;
+  content: "";
+  width: 30%;
+  height: 4px;
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 100%;
+  bottom: 35px;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.info-img-container {
+  grid-column: span 6;
+  width: 100%;
+  height: 500px;
+}
+
+.info-img-container img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.info-text-container {
+  grid-column: span 6;
+  width: 100%;
+  padding: 3rem 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.info-text-container p {
+  font-size: 1.5rem;
+}
+
+.info-container:nth-of-type(1) .info-text-container {
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+
+.info-container:nth-of-type(2) .info-text-container {
+  background-color: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+}
+
+/* End about page styles */
