--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,7 @@
 
 html {
   font-size: 10px;
+  scroll-behavior: smooth;
 }
 
 body {
@@ -23,19 +24,21 @@ body {
 /* Start header, navbar, burger menu styles */
 
 #header {
-  position: sticky;
+  position: fixed;
   left: 0;
   top: 0;
   width: 100%;
-  height: 50px;
+  height: 60px;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   gap: 1rem;
   padding: 0 2rem;
-  background-color: rgb(52, 164, 255);
-  box-shadow: 0 2px 1px 0 rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(8px) saturate(100%);
+  -webkit-backdrop-filter: blur(8px) saturate(100%);
+  background-color: rgba(0, 0, 0, 0.7);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.5);
   z-index: 100;
 }
 
@@ -52,6 +55,13 @@ body {
   font-family: "Lobster", cursive;
   text-transform: uppercase;
   letter-spacing: 5px;
+  color: white;
+}
+
+#trademark-text span {
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 0;
+  color: rgba(255, 255, 255, 0.7);
 }
 
 #navbar {
@@ -63,7 +73,6 @@ body {
   justify-content: center;
   align-items: center;
   gap: 3rem;
-  background-color: rgb(52, 164, 255);
 }
 
 #links-container {
@@ -81,22 +90,24 @@ body {
   width: max-content;
   height: 80%;
   padding: 0 1rem;
-  font-size: 1.3rem;
+  font-size: 1.5rem;
   font-weight: 500;
   text-decoration: none;
   line-height: 0px;
-  background-color: rgba(255, 255, 255, 0.3);
-  color: black;
+  color: rgb(255, 255, 255);
   border-radius: 5px;
-  transition: all 350ms;
+  transition: all 300ms;
 }
 
-.nav-link:hover {
-  background-color: rgb(255, 255, 255);
+.nav-link:hover,
+.current.nav-link:hover {
+  background-color: rgba(255, 255, 255, 0.5);
+  color: white;
 }
 
 .current.nav-link {
   background-color: rgb(255, 255, 255);
+  color: black;
 }
 
 #burger {
@@ -110,7 +121,7 @@ body {
 .line {
   width: 4rem;
   height: 0.4rem;
-  background-color: black;
+  background-color: rgb(255, 255, 255);
   border-radius: 5px;
   transition: all 300ms;
 }
@@ -140,9 +151,10 @@ body {
   #navbar {
     width: 30%;
     position: absolute;
-    top: 5rem;
+    top: 6rem;
     right: 0;
-    height: calc(100vh - 50px);
+    height: calc(100vh - 60px);
+    background-color: rgb(14, 14, 14);
     transform: translate(150%);
     transition: all 300ms;
   }
@@ -161,7 +173,7 @@ body {
     height: 50px;
     padding: 0 1.5rem;
     border-radius: 5px;
-    border: 2px solid rgba(0, 0, 0, 0.5);
+    border: 2px solid rgba(255, 255, 255, 0.5);
   }
 
   #burger {
@@ -176,7 +188,12 @@ body {
 }
 
 @media only screen and (max-width: 600px) {
+  #header {
+    height: 50px;
+  }
   #navbar {
+    top: 5rem;
+    height: calc(100vh - 50px);
     width: 55%;
   }
 }
@@ -209,6 +226,7 @@ body {
   align-items: center;
   gap: 3rem;
   padding: 2rem;
+  margin-top: 50px;
 }
 
 .form-container {
@@ -340,7 +358,7 @@ body {
 
 @media only screen and (max-width: 780px) {
   .form-main-container {
-    min-height: calc(100vh - 80px);
+    min-height: calc(100vh - 90px);
     flex-direction: column;
     gap: 0;
     padding: 2rem;
@@ -385,11 +403,13 @@ body {
   }
 }
 
-@media only screen and (max-width: 340px) {
+@media only screen and (max-width: 425px) {
   .form {
-    padding: 3rem;
+    padding: 3rem 2rem;
   }
+}
 
+@media only screen and (max-width: 340px) {
   .form-title {
     font-size: 2.8rem;
   }
@@ -408,7 +428,7 @@ body {
 
 .title-container {
   width: 100%;
-  height: calc(100vh - 50px);
+  height: 100vh;
   background-image: url(https://picsum.photos/2000);
   background-size: cover;
   background-repeat: no-repeat;
@@ -419,14 +439,17 @@ body {
 }
 
 .title-container h1 {
-  font-size: 4rem;
+  font-size: 5rem;
   font-weight: 700;
   letter-spacing: 5px;
-  background-color: rgba(0, 0, 0, 0.5);
+  text-align: center;
+  backdrop-filter: blur(8px) saturate(200%);
+  -webkit-backdrop-filter: blur(8px) saturate(200%);
+  background-color: rgba(0, 0, 0, 0.6);
   border-radius: 5px;
   color: white;
   padding: 2rem;
-  box-shadow: 5px 5px 0 0 rgba(255, 255, 255, 0.5);
+  box-shadow: 5px 5px 0 0 rgba(255, 255, 255, 1);
 }
 
 .info-container {
@@ -445,7 +468,7 @@ body {
   font-size: 3rem;
   font-weight: 700;
   text-align: center;
-  background-color: rgb(0, 20, 56);
+  background-color: rgb(14, 14, 14);
   color: white;
 }
 
@@ -456,7 +479,7 @@ body {
   content: "";
   width: 30%;
   height: 4px;
-  background-color: rgba(255, 255, 255, 0.7);
+  background-color: rgba(255, 255, 255, 0.5);
   border-radius: 100%;
   bottom: 35px;
   left: 50%;
@@ -466,7 +489,7 @@ body {
 .info-img-container {
   grid-column: span 6;
   width: 100%;
-  height: 500px;
+  height: 600px;
 }
 
 .info-img-container img {
@@ -478,6 +501,8 @@ body {
 .info-text-container {
   grid-column: span 6;
   width: 100%;
+  height: 100%;
+  overflow-y: auto;
   padding: 3rem 5rem;
   display: flex;
   justify-content: center;
@@ -485,17 +510,145 @@ body {
 }
 
 .info-text-container p {
-  font-size: 1.5rem;
+  font-size: 1.8rem;
 }
 
 .info-container:nth-of-type(1) .info-text-container {
-  background-color: rgb(0, 0, 0);
+  background-color: rgb(0, 29, 66);
   color: white;
 }
 
 .info-container:nth-of-type(2) .info-text-container {
-  background-color: rgb(255, 255, 255);
-  color: rgb(0, 0, 0);
+  background-color: rgb(214, 86, 0);
+  color: white;
+}
+
+.map-container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+#map {
+  min-height: 400px;
+  height: 80%;
+  max-height: 800px;
+  width: 80%;
+}
+
+.icons-container {
+  width: 100%;
+  height: max-content;
+  padding: 5rem 3rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+}
+
+.social-icon-container {
+  width: 150px;
+  height: 150px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top-left-radius: 20px;
+  border-bottom-left-radius: 5px;
+  border-bottom-right-radius: 20px;
+  border-top-right-radius: 5px;
+  background-color: rgba(24, 24, 24, 0.7);
+  box-shadow: -5px 5px 0 0 black;
+  cursor: pointer;
+  transition: all 300ms;
+}
+
+.social-icon-container:hover {
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 20px;
+  background-color: rgba(14, 14, 14, 1);
+  box-shadow: 5px 5px 0 0 rgba(0, 0, 0, 0.7);
+}
+
+@media only screen and (max-width: 1000px) {
+  .title-container h1 {
+    font-size: 4rem;
+  }
+
+  .info-img-container {
+    height: 600px;
+  }
+
+  .info-text-container {
+    padding: 2rem 3rem;
+  }
+
+  .info-text-container p {
+    font-size: 1.5rem;
+  }
+
+  .social-icon-container {
+    width: 120px;
+    height: 120px;
+  }
+
+  .social-icon-container svg {
+    width: 80px;
+    height: 80px;
+  }
+}
+
+@media only screen and (max-width: 780px) {
+  .info-img-container {
+    grid-column: span 12;
+    height: 400px;
+  }
+
+  .info-text-container {
+    grid-column: span 12;
+    width: 100%;
+    height: max-content;
+    overflow-y: auto;
+    padding: 3rem;
+  }
+}
+
+@media only screen and (max-width: 425px) {
+  .title-container h1 {
+    font-size: 3.5rem;
+  }
+
+  .info-container h2,
+  .location-container h2,
+  .social-container h2 {
+    font-size: 2.5rem;
+  }
+
+  .icons-container {
+    gap: 2rem;
+  }
+
+  .social-icon-container {
+    width: 100px;
+    height: 100px;
+  }
+
+  .social-icon-container svg {
+    width: 70px;
+    height: 70px;
+  }
+
+  #map {
+    min-height: 400px;
+    height: 80%;
+    max-height: 800px;
+    width: 100%;
+  }
 }
 
 /* End about page styles */
