--- a/styles/main.css
+++ b/styles/main.css
@@ -245,8 +245,8 @@ body {
   flex-direction: column;
   gap: 2rem;
   padding: 4rem 3rem;
-  background-color: rgb(240, 248, 255);
-  border: 2px solid rgb(52, 164, 255);
+  background-color: rgba(218, 237, 255, 0.3);
+  border: 2px solid rgb(110, 190, 255);
   border-radius: 5px;
   margin: 3rem 0;
 }
@@ -269,13 +269,22 @@ body {
   font-weight: 500;
 }
 
-.input-container input {
+.input-container input,
+.input-container textarea {
   font-size: 1.5rem;
   height: 40px;
   padding-left: 1rem;
   border-radius: 5px;
   border: none;
   border: solid 2px rgba(0, 0, 0, 0.7);
+  outline-color: rgb(110, 190, 255);
+  outline-offset: 2px;
+}
+
+.input-container textarea {
+  resize: vertical;
+  min-height: 150px;
+  padding: 1rem;
 }
 
 .select-container {
@@ -291,6 +300,8 @@ body {
   border-radius: 5px;
   font-size: 1.5rem;
   padding: 0 1rem;
+  outline-color: rgb(110, 190, 255);
+  outline-offset: 2px;
 }
 
 .select-container::after {
@@ -301,7 +312,7 @@ body {
   clip-path: polygon(100% 0%, 0 0%, 50% 100%);
   position: absolute;
   top: 45px;
-  right: 10px;
+  right: 15px;
   touch-action: none;
 }
 
@@ -319,14 +330,14 @@ body {
   font-weight: 500;
   text-align: center;
   background-color: rgb(255, 255, 255);
-  border: solid 2px rgb(52, 164, 255);
+  border: solid 2px rgb(110, 190, 255);
   border-radius: 5px;
   transition: all 300ms;
   cursor: pointer;
 }
 
 .submit-container input:hover {
-  background-color: rgb(52, 164, 255);
+  background-color: rgb(110, 190, 255);
 }
 
 .submit-container input:active {
@@ -652,3 +663,74 @@ body {
 }
 
 /* End about page styles */
+
+/* Start contact page styles */
+.contact-container {
+  width: 100%;
+  height: max-content;
+  margin-top: 60px;
+  padding: 3rem;
+}
+
+.contact-title {
+  font-size: 5rem;
+  font-weight: 700;
+}
+
+.contact-desc {
+  margin-top: 1rem;
+  font-size: 2rem;
+}
+
+.contact-desc a {
+  text-decoration: none;
+  color: rgb(0, 102, 255);
+  transition: all 200ms;
+}
+
+.contact-desc a:hover {
+  text-decoration: underline;
+  color: rgb(0, 0, 0);
+}
+
+#contact-form {
+  max-width: calc(100vw - 100px);
+  border: none;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 3rem;
+  background-color: rgba(181, 219, 255, 0.3);
+}
+
+#contact-form .input-container {
+  min-width: 45%;
+  max-width: 45%;
+  margin: 0;
+  padding: 0;
+  gap: 1rem;
+}
+
+#contact-form .select-container::after {
+  top: 50px;
+}
+
+@media only screen and (max-width: 768px) {
+  #contact-form {
+    max-width: calc(100vw - 50px);
+  }
+
+  #contact-form .input-container {
+    min-width: 90%;
+    max-width: 90%;
+  }
+}
+
+@media only screen and (max-width: 500px) {
+  .contact-title {
+    font-size: 4rem;
+  }
+
+  .contact-desc {
+    font-size: 1.8rem;
+  }
+}
