--- a/styles/main.css
+++ b/styles/main.css
@@ -1213,3 +1213,101 @@ body {
     font-size: 1.8rem;
   }
 }
+
+/* Start hotel page styles */
+
+#hotel-details-container {
+  width: 100%;
+  min-height: calc(100vh - 60px);
+  height: max-content;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 3rem;
+  margin-top: 60px;
+}
+
+#hotel-main-details-container,
+#hotel-side-details-container {
+  min-width: 45%;
+  max-width: 50%;
+  min-height: calc(100vh - 80px);
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  padding: 2rem;
+}
+
+#hotel-main-details-container h1 {
+  font-size: 4rem;
+  font-weight: 900;
+}
+
+#hotel-main-details-container p {
+  font-size: 2rem;
+  font-weight: 500;
+}
+
+#hotel-main-details-container > div {
+  width: 100%;
+  height: 70%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#hotel-main-details-container > div img {
+  width: 95%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 10px;
+  box-shadow: 5px 5px 0 0 rgba(14, 14, 14, 0.5);
+}
+
+#hotel-side-details-container h2 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+#hotel-side-details-container p {
+  font-size: 1.8rem;
+  font-weight: 500;
+}
+
+#reservation-form-container {
+  width: 100%;
+  height: max-content;
+  padding: 2rem 4rem;
+}
+
+#reservation-form {
+  max-width: calc(100vw - 100px);
+  border: none;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 3rem;
+  background-color: rgba(181, 219, 255, 0.3);
+}
+
+#reservation-form h3 {
+  min-width: 100%;
+  max-width: 100%;
+}
+
+#reservation-form .input-container {
+  min-width: 290px;
+  width: 90%;
+  max-width: 600px;
+  margin: 0;
+  padding: 0;
+  gap: 1rem;
+}
+
+#reservation-form .select-container::after {
+  top: 50px;
+}
