--- a/styles/main.css
+++ b/styles/main.css
@@ -1311,3 +1311,119 @@ body {
 #reservation-form .select-container::after {
   top: 50px;
 }
+
+/* End hotel page styles */
+
+/* Start dashboard styles */
+#dashboard-container {
+  width: 100%;
+  height: max-content;
+  padding: 2rem;
+  margin-top: 60px;
+  font-size: 1.5rem;
+  overflow-x: auto;
+}
+
+#dashboard-container h1 {
+  font-size: 4rem;
+  font-weight: 900;
+  margin-bottom: 3rem;
+}
+
+.table {
+  margin: 0 0 40px 0;
+  min-width: 290px;
+  width: 100%;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+  display: table;
+  border-radius: 5px;
+}
+@media screen and (max-width: 768px) {
+  .table {
+    display: block;
+  }
+}
+
+.row {
+  display: table-row;
+  background: #f6f6f6;
+}
+.row:nth-of-type(odd) {
+  background: #e9e9e9;
+}
+.row.header {
+  font-weight: 500;
+  color: #ffffff;
+  background: #0084ff;
+}
+@media screen and (max-width: 768px) {
+  .row {
+    padding: 14px 0 7px;
+    display: block;
+  }
+  .row.header {
+    padding: 0;
+    height: 6px;
+  }
+  .row.header .cell {
+    display: none;
+  }
+  .row .cell {
+    margin-bottom: 10px;
+  }
+  .row .cell:before {
+    margin-bottom: 3px;
+    content: attr(data-title);
+    min-width: 98px;
+    font-size: 10px;
+    line-height: 10px;
+    font-weight: bold;
+    text-transform: uppercase;
+    color: #969696;
+    display: block;
+  }
+}
+
+.cell {
+  padding: 6px 12px;
+  display: table-cell;
+}
+@media screen and (max-width: 768px) {
+  .cell {
+    padding: 2px 16px;
+    display: block;
+  }
+}
+
+.table-btn {
+  display: block;
+  height: 40px;
+  width: 100%;
+  margin-bottom: 0.5rem;
+  color: white;
+  text-decoration: none;
+  text-align: center;
+  line-height: 40px;
+  border-radius: 5px;
+  transition: all 300ms;
+}
+
+.table-btn:first-of-type {
+  background-color: green;
+}
+
+.table-btn:last-of-type {
+  background-color: red;
+}
+
+.table-btn:hover {
+  opacity: 70%;
+}
+
+@media screen and (max-width: 768px) {
+  .table-btn {
+    display: inline-block;
+    width: 45%;
+    margin-right: 0.5rem;
+  }
+}
