--- a/styles/main.css
+++ b/styles/main.css
@@ -1398,7 +1398,7 @@ body {
 
 #hotel-details-container {
   width: 100%;
-  min-height: calc(100vh - 60px);
+  min-height: calc(100vh - var(--header-height));
   height: max-content;
   display: flex;
   flex-direction: row;
@@ -1406,12 +1406,12 @@ body {
   justify-content: center;
   align-items: center;
   gap: 3rem;
-  margin-top: 60px;
+  margin-top: var(--header-height);
 }
 
 #hotel-main-details-container,
 #hotel-side-details-container {
-  min-width: 400px;
+  min-width: 290px;
   width: 45%;
   min-height: calc(100vh - 80px);
   height: max-content;
